# Linear-Regression-via-the-Normal-Equation

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: exam_data.csv
notebooks/: example.ipynb
src/: linear_regression.py
src/linear_regression/: model.py
